kubenertes/example.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: example-deployment

spec:

  replicas: 3

  selector:

    matchLabels:

      app: example

  template:

    metadata:

      labels:

        app: example

    spec:

      containers:

      - name: example-container

        image: example-image

        ports:

        - containerPort: 8080
