kubenertes/rabbitmq-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
  labels:
    app.kubernetes.io/name: rabbitmq
spec:
  type: ClusterIP
  ports:
    - name: management
      port: 15672
      targetPort: 15672
  selector:
    app.kubernetes.io/name: rabbitmq
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: rabbitmq.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-management
                port:
                  number: 15672
